--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "datepicker": "0.0.0",
     "expo": "^30.0.1",
     "firebase": "^5.5.6",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-material-textfield": "^0.12.0",
-    "react-navigation": "^2.16.0"
+    "react-native-modal-datetime-picker": "^6.1.0",
+    "react-native-multiple-select": "^0.4.4",
+    "react-navigation": "^2.16.0",
+    "react-time-picker": "^3.5.1"
   },
   "devDependencies": {
     "jest-expo": "30.0.0"
